src/app/components/layers/layers-cuts/layers-cuts.component.scss
.container {
    display: grid;
    height: 100%;

    grid-template-areas:
        'cuts'
        'buttons';
    grid-template-rows: auto 33px;
}

.cuts {
    grid-area: cuts;
}

.header {
    background-color: var(--background-subheader);
    height: 32px;
}

.header-text {
    line-height: 32px;
    text-align: center;
    margin: auto;
    font-weight: 500;
}

.spacer {
    width: 240px;
    height: 100%;
    min-height: 32px;
}

.buttons {
    position: relative;
    grid-area: buttons;

    height: 32px;
    background-color: var(--background-subheader);

    display: grid;
    grid-template-columns: repeat(3, 32px);
    justify-content: end;
    gap: 4px;

    padding-right: 16px;

    border-bottom: 1px solid rgba(0, 0, 0, 0.5);


}

.adder {
    width: 32px;
    //align-self: end;
}

.remover {
    width: 32px;
    // align-self: end;

}

.duplicate {
    width: 32px;
}

.zoom {
    width: 32px;
    height: 32px;

    position: absolute;
    left: 16px;
}

div>svg {
    margin-top: 6px;
    margin-left: 6px;

    height: 20px;
    width: 20px;

    opacity: 0.5;

    cursor: pointer;
}

